# carian-archive

./: .gitignore  README.md  create_sqlite_db.py  json_parser.py  parser.py
db/: associate_sprites.py  create_sqlite_db.py  schema.sql
json/: accessories.json  accessories_dlc01.json  accessory.json  arts.json  arts_dlc01.json  dialogues.json  dialogues_dlc01.json  gem.json  gems.json  gems_dlc01.json  goods.json  goods_dlc01.json  magic.json  npc_dialogues.json  npcs.json  npcs_dlc01.json  protector.json  protectors.json  protectors_dlc01.json  weapon.json  weapons.json  weapons_dlc01.json
server/: Cargo.toml
server/src/: main.rs  routes.rs  schema.rs
server/static/: style.css
server/templates/: base.html  entry.html  home.html  search.html  utils.html
