[package]
name = "carian-archive-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "fs" ] }
actix-web = "4"
actix-files = "0.6"
sqlx = { version = "0.7.0-alpha.3", default-features = false, features = [ "runtime-tokio", "sqlite", "macros" ] }
env_logger = "0.10.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
# validator = { version = "0.15", features = ["derive"] } #TODO: enable and use
askama = { version = "0.11" }
image = { version = "0.24.6", default-features = false, features = ["png"] }
